--- a/index.html
+++ b/index.html
@@ -8,33 +8,40 @@
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="abdikhayum.jpg" alt="abdikhayum profile picture" width="200" height="200"> </td>
-      <td>
-        <h1>Abdikhayum Hashim</h1>
-        <p><em>Founder of <strong>Kone</strong> </em> </p>
-        <p>I am a future full stack developer.I love to play football</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Yomogi&display=swap" rel="stylesheet">
+ 
 
-  <h3>Work Experience</h3>
-  <table>
-    <tr>
-      <td><strong>Date</strong></td>
-      <td><strong>Work</strong> </td>
-    </tr>
-    <tr>
-      <td>2018-2019</td>
-      <td>Snapchat </td>
-    </tr>
-    <tr>
-      <td>2019-2020</td>
-      <td>Facebook</td>
-    </tr>
-    </table>
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">More</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Highschool <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+    <h1>Abdikhayum Hashim</h1>
+    <div class="myimage"><img src="https://th.bing.com/th/id/R.167ef449f1826242291e3a612236a1fd?rik=sw%2fGaMJuhd7kAQ&riu=http%3a%2f%2fclipground.com%2fimages%2fsmiling-clipart-black-and-white-11.png&ehk=yu18rlVP%2fFm5LIYZjxHTsxJE0SSInKh%2bRICQc89W1Bk%3d&risl=&pid=ImgRaw" alt="HappyFace"></div>
+    <p><i>Upcoming</i></p>
+    <p><i>Full Stack Web Developer</i></p>
+    <div class="btndiv"><button type="button" class="btn btn-dark">About Me</button></div>
 <hr>
 <h3>Skills</h3>
 <table>
